--- a/BreakingBadApp/src/app/pages/character-details/character-details.page.html
+++ b/BreakingBadApp/src/app/pages/character-details/character-details.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>charactersDetails</ion-title>
+    <ion-title>characterDetails</ion-title>
   </ion-toolbar>
 </ion-header>
 
