--- a/BreakingBadApp/src/app/pages/tabs/tabs.page.html
+++ b/BreakingBadApp/src/app/pages/tabs/tabs.page.html
@@ -1,9 +1,20 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tabs</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="episodes">
+      <<ion-icon name="film-outline"></ion-icon>
+      <ion-label>Episodes</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="characters">
+      <ion-icon name="people-outline"></ion-icon>
+      <ion-label>Characters</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="quotes">
+      <ion-icon name="megaphone-outline"></ion-icon>
+      <ion-label>Quotes</ion-label>
+    </ion-tab-button>
+     <ion-tab-button tab="deaths">
+      <ion-icon name="skull-outline"></ion-icon>
+      <ion-label>Deaths</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
