--- a/BreakingBadApp/src/app/pages/tabs/tabs.page.html
+++ b/BreakingBadApp/src/app/pages/tabs/tabs.page.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="episodes">
-      <<ion-icon name="film-outline"></ion-icon>
+      <ion-icon name="film-outline"></ion-icon>
       <ion-label>Episodes</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="characters">
