--- a/BreakingBadApp/src/app/pages/episode-details/episode-details.page.html
+++ b/BreakingBadApp/src/app/pages/episode-details/episode-details.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="dark">
     <ion-buttons slot="start">
       <ion-back-button defaulthref="/tabs/episodes"></ion-back-button>
     </ion-buttons>
