fixing characters page name

--- a/BreakingBadApp/src/app/pages/episode-details/episode-details.page.html
+++ b/BreakingBadApp/src/app/pages/episode-details/episode-details.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start" defaultHref="/tabs/episodes">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title> {{ eposide.title }}</ion-title>
+    <ion-title> {{ episode.title }}</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="unfavoriteepisode()" *ngIf="isFavorite">
         <ion-icon name="star" slot="icon-only" color="secondary"></ion-icon>
