--- a/BreakingBadApp/src/app/pages/deaths/deaths.page.html
+++ b/BreakingBadApp/src/app/pages/deaths/deaths.page.html
@@ -1,9 +1,15 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>deaths</ion-title>
+  <ion-toolbar color="danger">
+    <ion-title>Deaths</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let death of deaths | async">
+      <h6>Number of Deaths</h6>
+      <ion-badge color="danger" slot="end">{{ death.deathCount }}</ion-badge>
+      
+    </ion-item>
+  </ion-list>
 </ion-content>
