--- a/BreakingBadApp/src/app/pages/tabs/tabs.page.html
+++ b/BreakingBadApp/src/app/pages/tabs/tabs.page.html
@@ -1,20 +1,20 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="episodes">
-      <ion-icon name="film-outline"></ion-icon>
+      <ion-icon name="film-outline"  color="dark"></ion-icon>
       <ion-label>Episodes</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="characters">
-      <ion-icon name="people-outline"></ion-icon>
+      <ion-icon name="people-outline"  color="dark"></ion-icon>
       <ion-label>Characters</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="quotes">
-      <ion-icon name="megaphone-outline"></ion-icon>
+      <ion-icon name="megaphone-outline"  color="dark"></ion-icon>
       <ion-label>Quotes</ion-label>
     </ion-tab-button>
      <ion-tab-button tab="deaths">
-      <ion-icon name="skull-outline"></ion-icon>
-      <ion-label>Deaths</ion-label>
+      <ion-icon name="skull-outline"  color="danger"></ion-icon>
+      <ion-label  color="danger">Deaths</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
