Camera function implemented

--- a/BreakingBadApp/src/app/pages/tabs/tabs.page.html
+++ b/BreakingBadApp/src/app/pages/tabs/tabs.page.html
@@ -16,5 +16,9 @@
       <ion-icon name="skull-outline"  color="danger"></ion-icon>
       <ion-label  color="danger">Deaths</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="camera">
+      <ion-icon name="camera-outline"  color="dark"></ion-icon>
+      <ion-label  color="dark">Camera</ion-label>
+    </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
